--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
 body {
-    background-color: thistle;
+    background-color: rgb(238, 238, 238);
+    font-family: "Times New Roman", Times, serif;
 }
